updage index.htlm

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>This is hight time to get a job in DevOps</H1>
+    <H1>This is hight time to get a job in DevOps webook not work i local host</H1>
 </body>
 </html>
