--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Myweb</title>
 </head>
 <body>
     <H1>This is hight time to get a job in DevOps webook not work i local host</H1>
