--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myweb</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <H1>This is hight time to get a job in DevOps webook not work i local host</H1>
+    <h2>finally done let move anothe stage</h2>
 </body>
 </html>
